<?xml version="1.0"?>
<package>
  <name>zsProxy</name>
  <version>0.0.1</version>
  <description>A proxy of rosaria and move_base that makes connection between ROS for LV and ROS</description>
  <maintainer email="zhensheng@outlook.com">Li Zhensheng</maintainer> 
  <url type="website">http://zhenshenglee.github.io</url>
  <license>Apache</license>
  <author email="zhensheng@outlook.com">Li Zhensheng</author> 


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>