<?xml version="1.0"?>
<package>
  <name>zsProxy</name>
  <version>0.0.1</version>
  <description>A proxy of rosaria and move_base that makes connection between ROS for LV and ROS</description>
  <maintainer email="zhensheng@outlook.com">Li Zhensheng</maintainer>
  <url type="website">http://zhenshenglee.github.io</url>
  <license>Apache</license>
  <author email="zhensheng@outlook.com">Li Zhensheng</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rosaria</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rosaria</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>